--- a/whatsappclone/src/main/resources/application.yml
+++ b/whatsappclone/src/main/resources/application.yml
@@ -25,6 +25,10 @@ spring:
     multipart:
       max-file-size: 50MB
 
+springdoc:
+  default-produces-media-type: application/json
+
+
 application:
   file:
     uploads:
