--- a/whatsappclone/src/main/resources/application.yml
+++ b/whatsappclone/src/main/resources/application.yml
@@ -1,26 +1,26 @@
+server:
+  port: 8081
 spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/whatsapp_clone
-    username: username
-    password: password
+    username: postgres
+    password: root123
   jpa:
     hibernate:
-      ddl-auto:update
+      ddl-auto: update
     show-sql: false
     properties:
       hibernate:
-        format-sql: true
+        format_sql: false
     database: postgresql
     database-platform: org.hibernate.dialect.PostgreSQLDialect
   flyway:
     enabled: false
-
   security:
     oauth2:
-     resourceserver:
-       jwt:
-         issuer-uri: http://localhost:9090/realms/whatsapp-clone
-
+      resourceserver:
+        jwt:
+          issuer-uri: http://localhost:9090/realms/whatsapp-clone
   servlet:
     multipart:
       max-file-size: 50MB
