--- a/whatsapp-clone-ui/package.json
+++ b/whatsapp-clone-ui/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^19.1.0",
     "@angular/platform-browser-dynamic": "^19.1.0",
     "@angular/router": "^19.1.0",
+    "@ctrl/ngx-emoji-mart": "^9.2.0",
     "@fortawesome/fontawesome-free": "^6.7.2",
     "keycloak-js": "^26.1.0",
     "ng": "^0.0.0",
