--- a/whatsappclone/src/main/resources/application.yml
+++ b/whatsappclone/src/main/resources/application.yml
@@ -3,8 +3,8 @@ server:
 spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/whatsapp_clone
-    username: postgres
-    password: root123
+    username:
+    password: 
   jpa:
     hibernate:
       ddl-auto: create
